added 3rd project to test config server